COMMUNITY PAGE: Row1 Button center alignment is fixed

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_community.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_community.scss
@@ -24,7 +24,7 @@
             background-color: rgba($White, 0.6);
             color: $Orange;
             padding: 19px 46px;
-            margin-left: 139px;
+            margin-left: 104px;
             &:hover {
                 background-color: rgba($White, 0.8);
             }
